--- a/booking-service/booking-service/src/main/resources/application.properties
+++ b/booking-service/booking-service/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:33516/railway
 spring.datasource.username=root
 spring.datasource.password=RjjrZKDrATwQhATggGcbsZXcIyOzyPcA
 
-# --- C?u hình JPA ---
+# --- Cau hình JPA ---
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
