--- a/api-gateway/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/api-gateway/src/main/resources/application.yml
@@ -7,25 +7,21 @@ spring:
   cloud:
     gateway:
       routes:
-        # --- Booking Service ---
+        # --- CH CHO BOOKING ---
         - id: booking-service
-          uri: http://localhost:8082
+          uri: lb://booking-service
           predicates:
             - Path=/api/bookings/**
 
-        # --- Payment Service ---
+        # --- CH CHO PAYMENT ---
         - id: payment-service
-          uri: http://localhost:8083
+          # Tu tim thang ten là payment-service
+          uri: lb://payment-service
           predicates:
             - Path=/api/payments/**
 
-        # --- User Service ---
-        - id: user-service
-          uri: http://localhost:8081
-          predicates:
-            - Path=/api/users/**
-
-logging:
-  level:
-    org.springframework.cloud.gateway: DEBUG
-    reactor.netty: DEBUG
+# ch ket noi BROKER (EUREKA)
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
