--- a/payment_service/payment_service/src/main/resources/application.properties
+++ b/payment_service/payment_service/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-
+spring.application.name=payment-service
 server.port=8083
 
-# Thông tin k?t n?i DB
+# Thông tin ket noi DB
 spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:33516/railway
 spring.datasource.username=root
 spring.datasource.password=RjjrZKDrATwQhATggGcbsZXcIyOzyPcA
 
-# C?u hình JPA
+# Cau hinh JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
@@ -14,3 +14,4 @@ spring.jpa.hibernate.ddl-auto=validate
 
 # In SQL ra log
 spring.jpa.show-sql=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
