--- a/user-service/user-service/src/main/resources/application.properties
+++ b/user-service/user-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=user-service
 server.port=8081
 
-# Thông tin ket noi DB
-spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:33516/railway
+# Thông tin ket noi DB M?I
+# D?a trên DB_HOST=localhost, DB_NAME=beptpmhdv, DB_USERNAME=root, DB_PASSWORD=
+spring.datasource.url=jdbc:mysql://localhost:3306/beptpmhdv
 spring.datasource.username=root
-spring.datasource.password=RjjrZKDrATwQhATggGcbsZXcIyOzyPcA
+spring.datasource.password=
 
 # Cau hinh JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -15,3 +16,9 @@ spring.jpa.hibernate.ddl-auto=validate
 # In SQL ra log
 spring.jpa.show-sql=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+# ... các c?u hình c? gi? nguyên ...
+
+# Thêm dòng này ?? Hibernate gi? nguyên ch? Hoa/Th??ng nh? trong @Column
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Các c?u hình khác gi? nguyên
