--- a/booking-service/booking-service/src/main/resources/application.properties
+++ b/booking-service/booking-service/src/main/resources/application.properties
@@ -3,11 +3,17 @@ spring.application.name=booking-service
 server.port=8082
 
 
-spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:33516/railway
+# DATABASE XAMPP
+spring.datasource.url=jdbc:mysql://localhost:3306/dtpayment
 spring.datasource.username=root
-spring.datasource.password=RjjrZKDrATwQhATggGcbsZXcIyOzyPcA
+spring.datasource.password=
 
-# --- Cau hinh JPA ---
+# JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+# Ép Hibernate gi? nguyên tên c?t (dateBooking v?n là dateBooking)
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
