--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=service
 server.port=8088
 
 # --- Database Configuration (Localhost) ---
-spring.datasource.url=jdbc:mysql://localhost:3306/appointment?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# DATABASE XAMPP
+spring.datasource.url=jdbc:mysql://localhost:3306/dtpayment
 spring.datasource.username=root
-# Dien mat khau cua ban vao day
-spring.datasource.password=123456
+spring.datasource.password=
+
 
 # --- JPA Configuration ---
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -15,3 +16,4 @@ spring.jpa.show-sql=true
 
 # --- Eureka Client ---
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
