--- a/user-service/user-service/src/main/resources/application.properties
+++ b/user-service/user-service/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=8081
 
 # Thông tin ket noi DB M?I
 # D?a trên DB_HOST=localhost, DB_NAME=beptpmhdv, DB_USERNAME=root, DB_PASSWORD=
-spring.datasource.url=jdbc:mysql://localhost:3306/beptpmhdv
+# DATABASE XAMPP
+spring.datasource.url=jdbc:mysql://localhost:3306/dtpayment
 spring.datasource.username=root
 spring.datasource.password=
 
