--- a/booking-service/booking-service/src/main/resources/application.properties
+++ b/booking-service/booking-service/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8082
 
 
 # DATABASE XAMPP
-spring.datasource.url=jdbc:mysql://localhost:3306/appointment
+spring.datasource.url=jdbc:mysql://localhost:3306/beptpmhdv
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 
 # JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
