--- a/payment_service/payment_service/src/main/resources/application.properties
+++ b/payment_service/payment_service/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=payment-service
 server.port=8083
 
 # DATABASE XAMPP
-spring.datasource.url=jdbc:mysql://localhost:3306/appointment
+spring.datasource.url=jdbc:mysql://localhost:3306/beptpmhdv?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 
 # JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
