--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8088
 
 # --- Database Configuration (Localhost) ---
 # DATABASE XAMPP
-spring.datasource.url=jdbc:mysql://localhost:3306/appointment
+spring.datasource.url=jdbc:mysql://localhost:3306/beptpmhdv
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 
 # --- JPA Configuration ---
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
