--- a/user-service/user-service/src/main/resources/application.properties
+++ b/user-service/user-service/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8087
 # Thông tin ket noi DB M?I
 # D?a trên DB_HOST=localhost, DB_NAME=beptpmhdv, DB_USERNAME=root, DB_PASSWORD=
 # DATABASE XAMPP
-spring.datasource.url=jdbc:mysql://localhost:3306/beptpmhdv
+spring.datasource.url=jdbc:mysql://localhost:3306/appointment
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 
 # Cau hinh JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
